tests/snapshots/formats__webp__anim-mixed.webp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ anim-mixed.webp — WebP extended, 16×16, animated, 3 frames, 400 ms, plays 3 times, lossy and lossless frames, alpha  [0x0+0x1ac]
  ▾ Header  [0x0+0xc]
      Chunk ID: "RIFF"  [0x0+0x4]
      Size: 420  [0x4+0x4]
      Form type: "WEBP"  [0x8+0x4]
  ▾ VP8X — 16×16, alpha  [0xc+0x12]
      Chunk ID: "VP8X"  [0xc+0x4]
      Chunk size: 10  [0x10+0x4]
      Flags: 0x12 [ALPHA | ANIMATION]  [0x14+0x1]
      Reserved: 0  [0x15+0x3]
      Canvas width − 1: 15 — 16 px  [0x18+0x3]
      Canvas height − 1: 15 — 16 px  [0x1b+0x3]
  ▾ ANIM — background #ffffffff, plays 3 times  [0x1e+0xe]
      Chunk ID: "ANIM"  [0x1e+0x4]
      Chunk size: 6  [0x22+0x4]
      Background color: ff ff ff ff  |....| — #ffffffff  [0x26+0x4]
      Loop count: 3  [0x2a+0x2]
  ▾ ANMF — 16×16 at (0, 0), 120 ms, no blending  [0x2c+0x6e]
      Chunk ID: "ANMF"  [0x2c+0x4]
      Chunk size: 102  [0x30+0x4]
      X offset / 2: 0 — 0 px  [0x34+0x3]
      Y offset / 2: 0 — 0 px  [0x37+0x3]
      Width − 1: 15 — 16 px  [0x3a+0x3]
      Height − 1: 15 — 16 px  [0x3d+0x3]
      Duration: 120 — 120 ms  [0x40+0x3]
      Flags: 0x2 [DO_NOT_BLEND]  [0x43+0x1]
    ▾ VP8L — 16×16, alpha  [0x44+0x56]
        Chunk ID: "VP8L"  [0x44+0x4]
        Chunk size: 78  [0x48+0x4]
      ▾ Header  [0x4c+0x5]
          Signature: 0x2f  [0x4c+0x1]
          Width − 1: 15 — 16 px  [0x4d+0x2]
          Height − 1: 15 — 16 px  [0x4e+0x3]
          Alpha is used: true  [0x50+0x1]
          Version: 0  [0x50+0x1]
      ▾ Image stream — transforms, color cache, then entropy-coded pixels  [0x51+0x49]
          Transform present: true  [0x51+0x1]
          Transform type: predictor (0x0) — transform 1  [0x51+0x1]
          Block size bits: 7 — 512×512 blocks  [0x51+0x1]
          Transform data — an entropy-coded sub-image of per-block parameters follows; the rest of the stream is entropy-coded
  ▾ ANMF — 16×16 at (0, 0), 80 ms, no blending  [0x9a+0xa6]
      Chunk ID: "ANMF"  [0x9a+0x4]
      Chunk size: 158  [0x9e+0x4]
      X offset / 2: 0 — 0 px  [0xa2+0x3]
      Y offset / 2: 0 — 0 px  [0xa5+0x3]
      Width − 1: 15 — 16 px  [0xa8+0x3]
      Height − 1: 15 — 16 px  [0xab+0x3]
      Duration: 80 — 80 ms  [0xae+0x3]
      Flags: 0x2 [DO_NOT_BLEND]  [0xb1+0x1]
    ▾ ALPH — lossless (VP8L)  [0xb2+0x22]
        Chunk ID: "ALPH"  [0xb2+0x4]
        Chunk size: 25  [0xb6+0x4]
      ▾ Header  [0xba+0x1]
          Reserved: 0  [0xba+0x1]
          Preprocessing: none (0x0)  [0xba+0x1]
          Filtering method: none (0x0)  [0xba+0x1]
          Compression method: lossless (VP8L) (0x1)  [0xba+0x1]
      ▾ Alpha bitstream — VP8L image stream without header  [0xbb+0x18]
          Transform present: true  [0xbb+0x1]
          Transform type: color indexing (0x3) — transform 1  [0xbb+0x1]
          Color table size − 1: 1 — 2 colors, 8 pixels per byte  [0xbb+0x2]
          Transform data — the entropy-coded color table follows; the rest of the stream is entropy-coded
        Pad byte  [0xd3+0x1]
    ▾ VP8 — 16×16  [0xd4+0x6c]
        Chunk ID: "VP8 "  [0xd4+0x4]
        Chunk size: 100  [0xd8+0x4]
      ▾ Frame header  [0xdc+0xa]
          Frame type: 0 — key frame  [0xdc+0x1]
          Version: bicubic reconstruction, normal loop filter (0x0)  [0xdc+0x1]
          Show frame: true  [0xdc+0x1]
          First partition size: 20 — 20 bytes  [0xdc+0x3]
          Start code: 0x2a019d — 9d 01 2a  [0xdf+0x3]
          Width: 16  [0xe2+0x2]
          Horizontal scale: none (0x0)  [0xe3+0x1]
          Height: 16  [0xe4+0x2]
          Vertical scale: none (0x0)  [0xe5+0x1]
        First partition — modes and probabilities (boolean-entropy-coded)  [0xe6+0x14]
        Token partitions — DCT coefficients (boolean-entropy-coded)  [0xfa+0x46]
  ▾ ANMF — 16×16 at (0, 0), 200 ms, no blending  [0x140+0x6c]
      Chunk ID: "ANMF"  [0x140+0x4]
      Chunk size: 100  [0x144+0x4]
      X offset / 2: 0 — 0 px  [0x148+0x3]
      Y offset / 2: 0 — 0 px  [0x14b+0x3]
      Width − 1: 15 — 16 px  [0x14e+0x3]
      Height − 1: 15 — 16 px  [0x151+0x3]
      Duration: 200 — 200 ms  [0x154+0x3]
      Flags: 0x2 [DO_NOT_BLEND]  [0x157+0x1]
    ▾ VP8L — 16×16, alpha  [0x158+0x54]
        Chunk ID: "VP8L"  [0x158+0x4]
        Chunk size: 75  [0x15c+0x4]
      ▾ Header  [0x160+0x5]
          Signature: 0x2f  [0x160+0x1]
          Width − 1: 15 — 16 px  [0x161+0x2]
          Height − 1: 15 — 16 px  [0x162+0x3]
          Alpha is used: true  [0x164+0x1]
          Version: 0  [0x164+0x1]
      ▾ Image stream — transforms, color cache, then entropy-coded pixels  [0x165+0x46]
          Transform present: true  [0x165+0x1]
          Transform type: predictor (0x0) — transform 1  [0x165+0x1]
          Block size bits: 7 — 512×512 blocks  [0x165+0x1]
          Transform data — an entropy-coded sub-image of per-block parameters follows; the rest of the stream is entropy-coded
        Pad byte  [0x1ab+0x1]
