tests/snapshots/formats__webp__animated.webp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ animated.webp — WebP extended, 16×16, animated, 3 frames, 300 ms, plays 2 times, lossy and lossless frames  [0x0+0x196]
  ▾ Header  [0x0+0xc]
      Chunk ID: "RIFF"  [0x0+0x4]
      Size: 398  [0x4+0x4]
      Form type: "WEBP"  [0x8+0x4]
  ▾ VP8X — 16×16  [0xc+0x12]
      Chunk ID: "VP8X"  [0xc+0x4]
      Chunk size: 10  [0x10+0x4]
      Flags: 0x2 [ANIMATION]  [0x14+0x1]
      Reserved: 0  [0x15+0x3]
      Canvas width − 1: 15 — 16 px  [0x18+0x3]
      Canvas height − 1: 15 — 16 px  [0x1b+0x3]
  ▾ ANIM — background #ffffffff, plays 2 times  [0x1e+0xe]
      Chunk ID: "ANIM"  [0x1e+0x4]
      Chunk size: 6  [0x22+0x4]
      Background color: ff ff ff ff  |....| — #ffffffff  [0x26+0x4]
      Loop count: 2  [0x2a+0x2]
  ▾ ANMF — 16×16 at (0, 0), 100 ms, no blending  [0x2c+0x7e]
      Chunk ID: "ANMF"  [0x2c+0x4]
      Chunk size: 118  [0x30+0x4]
      X offset / 2: 0 — 0 px  [0x34+0x3]
      Y offset / 2: 0 — 0 px  [0x37+0x3]
      Width − 1: 15 — 16 px  [0x3a+0x3]
      Height − 1: 15 — 16 px  [0x3d+0x3]
      Duration: 100 — 100 ms  [0x40+0x3]
      Flags: 0x2 [DO_NOT_BLEND]  [0x43+0x1]
    ▾ VP8L — 16×16  [0x44+0x66]
        Chunk ID: "VP8L"  [0x44+0x4]
        Chunk size: 93  [0x48+0x4]
      ▾ Header  [0x4c+0x5]
          Signature: 0x2f  [0x4c+0x1]
          Width − 1: 15 — 16 px  [0x4d+0x2]
          Height − 1: 15 — 16 px  [0x4e+0x3]
          Alpha is used: false  [0x50+0x1]
          Version: 0  [0x50+0x1]
      ▾ Image stream — transforms, color cache, then entropy-coded pixels  [0x51+0x58]
          Transform present: false  [0x51+0x1]
          Color cache: false  [0x51+0x1]
          Meta prefix codes: false  [0x51+0x1]
          Prefix codes — entropy-coded data follows
        Pad byte  [0xa9+0x1]
  ▾ ANMF — 16×3 at (0, 12), 100 ms  [0xaa+0x76]
      Chunk ID: "ANMF"  [0xaa+0x4]
      Chunk size: 110  [0xae+0x4]
      X offset / 2: 0 — 0 px  [0xb2+0x3]
      Y offset / 2: 6 — 12 px  [0xb5+0x3]
      Width − 1: 15 — 16 px  [0xb8+0x3]
      Height − 1: 2 — 3 px  [0xbb+0x3]
      Duration: 100 — 100 ms  [0xbe+0x3]
      Flags: 0x0 []  [0xc1+0x1]
    ▾ VP8L — 16×3  [0xc2+0x5e]
        Chunk ID: "VP8L"  [0xc2+0x4]
        Chunk size: 85  [0xc6+0x4]
      ▾ Header  [0xca+0x5]
          Signature: 0x2f  [0xca+0x1]
          Width − 1: 15 — 16 px  [0xcb+0x2]
          Height − 1: 2 — 3 px  [0xcc+0x3]
          Alpha is used: false  [0xce+0x1]
          Version: 0  [0xce+0x1]
      ▾ Image stream — transforms, color cache, then entropy-coded pixels  [0xcf+0x50]
          Transform present: true  [0xcf+0x1]
          Transform type: color indexing (0x3) — transform 1  [0xcf+0x1]
          Color table size − 1: 15 — 16 colors, 2 pixels per byte  [0xcf+0x2]
          Transform data — the entropy-coded color table follows; the rest of the stream is entropy-coded
        Pad byte  [0x11f+0x1]
  ▾ ANMF — 16×3 at (0, 12), 100 ms  [0x120+0x76]
      Chunk ID: "ANMF"  [0x120+0x4]
      Chunk size: 110  [0x124+0x4]
      X offset / 2: 0 — 0 px  [0x128+0x3]
      Y offset / 2: 6 — 12 px  [0x12b+0x3]
      Width − 1: 15 — 16 px  [0x12e+0x3]
      Height − 1: 2 — 3 px  [0x131+0x3]
      Duration: 100 — 100 ms  [0x134+0x3]
      Flags: 0x0 []  [0x137+0x1]
    ▾ VP8 — 16×3  [0x138+0x5e]
        Chunk ID: "VP8 "  [0x138+0x4]
        Chunk size: 86  [0x13c+0x4]
      ▾ Frame header  [0x140+0xa]
          Frame type: 0 — key frame  [0x140+0x1]
          Version: bilinear reconstruction, no loop filter (0x2)  [0x140+0x1]
          Show frame: true  [0x140+0x1]
          First partition size: 28 — 28 bytes  [0x140+0x3]
          Start code: 0x2a019d — 9d 01 2a  [0x143+0x3]
          Width: 16  [0x146+0x2]
          Horizontal scale: none (0x0)  [0x147+0x1]
          Height: 3  [0x148+0x2]
          Vertical scale: none (0x0)  [0x149+0x1]
        First partition — modes and probabilities (boolean-entropy-coded)  [0x14a+0x1c]
        Token partitions — DCT coefficients (boolean-entropy-coded)  [0x166+0x30]
