tests/snapshots/formats__webp__lossless.webp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ lossless.webp — WebP lossless, 16×16  [0x0+0x72]
  ▾ Header  [0x0+0xc]
      Chunk ID: "RIFF"  [0x0+0x4]
      Size: 106  [0x4+0x4]
      Form type: "WEBP"  [0x8+0x4]
  ▾ VP8L — 16×16  [0xc+0x66]
      Chunk ID: "VP8L"  [0xc+0x4]
      Chunk size: 93  [0x10+0x4]
    ▾ Header  [0x14+0x5]
        Signature: 0x2f  [0x14+0x1]
        Width − 1: 15 — 16 px  [0x15+0x2]
        Height − 1: 15 — 16 px  [0x16+0x3]
        Alpha is used: false  [0x18+0x1]
        Version: 0  [0x18+0x1]
    ▾ Image stream — transforms, color cache, then entropy-coded pixels  [0x19+0x58]
        Transform present: false  [0x19+0x1]
        Color cache: false  [0x19+0x1]
        Meta prefix codes: false  [0x19+0x1]
        Prefix codes — entropy-coded data follows
      Pad byte  [0x71+0x1]
