tests/snapshots/formats__webp__lossy-alpha-meta.webp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ lossy-alpha-meta.webp — WebP extended, 16×16, lossy, alpha, ICC, Exif, XMP  [0x0+0x46a]
  ▾ Header  [0x0+0xc]
      Chunk ID: "RIFF"  [0x0+0x4]
      Size: 1122  [0x4+0x4]
      Form type: "WEBP"  [0x8+0x4]
  ▾ VP8X — 16×16, alpha  [0xc+0x12]
      Chunk ID: "VP8X"  [0xc+0x4]
      Chunk size: 10  [0x10+0x4]
      Flags: 0x3c [ICC | ALPHA | EXIF | XMP]  [0x14+0x1]
      Reserved: 0  [0x15+0x3]
      Canvas width − 1: 15 — 16 px  [0x18+0x3]
      Canvas height − 1: 15 — 16 px  [0x1b+0x3]
  ▾ ICCP — 588 bytes  [0x1e+0x254]
      Chunk ID: "ICCP"  [0x1e+0x4]
      Chunk size: 588  [0x22+0x4]
    ▾ ICC profile — ICC profile v4.4.0, Display device, RGB → XYZ, "sRGB built-in"  [0x26+0x24c]
      ▾ Header  [0x26+0x80]
          Profile size: 588  [0x26+0x4]
          Preferred CMM type: "lcms"  [0x2a+0x4]
          Version: 0x4400000 — 4.4.0  [0x2e+0x4]
          Device class: Display device (0x6d6e7472)  [0x32+0x4]
          Data colour space: RGB (0x52474220)  [0x36+0x4]
          Profile connection space: XYZ (0x58595a20)  [0x3a+0x4]
          Year: 2026  [0x3e+0x2]
          Month: 10  [0x40+0x2]
          Day: 9  [0x42+0x2]
          Hour: 15  [0x44+0x2]
          Minute: 16  [0x46+0x2]
          Second: 4  [0x48+0x2]
          Signature: "acsp"  [0x4a+0x4]
          Primary platform: Apple (0x4150504c)  [0x4e+0x4]
          Profile flags: 0x0 []  [0x52+0x4]
          Device manufacturer: "\\x00\\x00\\x00\\x00"  [0x56+0x4]
          Device model: 0x0  [0x5a+0x4]
          Device attributes: 0x0 []  [0x5e+0x8]
          Rendering intent: Perceptual (0x0)  [0x66+0x4]
          PCS illuminant X: 0.964202880859375  [0x6a+0x4]
          PCS illuminant Y: 1  [0x6e+0x4]
          PCS illuminant Z: 0.8249053955078125  [0x72+0x4]
          Profile creator: "lcms"  [0x76+0x4]
          Profile ID: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0x7a+0x10]
          Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x8a+0x1c]
      ▾ Tag table — 11 tags  [0xa6+0x88]
        ▾ 'desc': Profile description (0x64657363) — 'mluc', 54 bytes: "sRGB built-in"  [0x12e+0x36]
            Type: "mluc"  [0x12e+0x4]
            Reserved: 0  [0x132+0x4]
            Records: 1  [0x136+0x4]
            Record size: 12  [0x13a+0x4]
            Language: "en"  [0x13e+0x2]
            Country: "US"  [0x140+0x2]
            Length: 26  [0x142+0x4]
            Offset: 0x1c  [0x146+0x4]
            en-US: "sRGB built-in"  [0x14a+0x1a]
        ▾ 'cprt': Copyright (0x63707274) — 'mluc', 76 bytes: "No copyright, use freely"  [0x166+0x4c]
            Type: "mluc"  [0x166+0x4]
            Reserved: 0  [0x16a+0x4]
            Records: 1  [0x16e+0x4]
            Record size: 12  [0x172+0x4]
            Language: "en"  [0x176+0x2]
            Country: "US"  [0x178+0x2]
            Length: 48  [0x17a+0x4]
            Offset: 0x1c  [0x17e+0x4]
            en-US: "No copyright, use freely"  [0x182+0x30]
        ▾ 'wtpt': Media white point (0x77747074) — 'XYZ ', 20 bytes: X 0.9642, Y 1.0000, Z 0.8249  [0x1b2+0x14]
            Type: "XYZ "  [0x1b2+0x4]
            Reserved: 0  [0x1b6+0x4]
            X: 0.964202880859375  [0x1ba+0x4]
            Y: 1  [0x1be+0x4]
            Z: 0.8249053955078125  [0x1c2+0x4]
        ▾ 'chad': Chromatic adaptation (0x63686164) — 'sf32', 44 bytes  [0x1c6+0x2c]
            Type: "sf32"  [0x1c6+0x4]
            Reserved: 0  [0x1ca+0x4]
            Value: 1.047882080078125  [0x1ce+0x4]
            Value: 0.022918701171875  [0x1d2+0x4]
            Value: -0.0502166748046875  [0x1d6+0x4]
            Value: 0.0295867919921875  [0x1da+0x4]
            Value: 0.990478515625  [0x1de+0x4]
            Value: -0.0170745849609375  [0x1e2+0x4]
            Value: -0.009246826171875  [0x1e6+0x4]
            Value: 0.01507568359375  [0x1ea+0x4]
            Value: 0.751678466796875  [0x1ee+0x4]
        ▾ 'rXYZ': Red matrix column (0x7258595a) — 'XYZ ', 20 bytes: X 0.4360, Y 0.2225, Z 0.0139  [0x1f2+0x14]
            Type: "XYZ "  [0x1f2+0x4]
            Reserved: 0  [0x1f6+0x4]
            X: 0.43603515625  [0x1fa+0x4]
            Y: 0.2224884033203125  [0x1fe+0x4]
            Z: 0.013916015625  [0x202+0x4]
        ▾ 'bXYZ': Blue matrix column (0x6258595a) — 'XYZ ', 20 bytes: X 0.1431, Y 0.0606, Z 0.7139  [0x206+0x14]
            Type: "XYZ "  [0x206+0x4]
            Reserved: 0  [0x20a+0x4]
            X: 0.1430511474609375  [0x20e+0x4]
            Y: 0.06060791015625  [0x212+0x4]
            Z: 0.7139129638671875  [0x216+0x4]
        ▾ 'gXYZ': Green matrix column (0x6758595a) — 'XYZ ', 20 bytes: X 0.3851, Y 0.7169, Z 0.0971  [0x21a+0x14]
            Type: "XYZ "  [0x21a+0x4]
            Reserved: 0  [0x21e+0x4]
            X: 0.3851165771484375  [0x222+0x4]
            Y: 0.7169036865234375  [0x226+0x4]
            Z: 0.0970611572265625  [0x22a+0x4]
        ▾ 'rTRC': Red tone reproduction curve (0x72545243) — 'para', 32 bytes: function 3, gamma 2.400  [0x22e+0x20]
            Type: "para"  [0x22e+0x4]
            Reserved: 0  [0x232+0x4]
            Function type: 3  [0x236+0x2]
            Reserved: 0  [0x238+0x2]
            g: 2.399993896484375  [0x23a+0x4]
            a: 0.9478607177734375  [0x23e+0x4]
            b: 0.0521392822265625  [0x242+0x4]
            c: 0.077392578125  [0x246+0x4]
            d: 0.0404510498046875  [0x24a+0x4]
        ▾ 'gTRC': Green tone reproduction curve (0x67545243) — 'para', 32 bytes: function 3, gamma 2.400  [0x22e+0x20]
            Type: "para"  [0x22e+0x4]
            Reserved: 0  [0x232+0x4]
            Function type: 3  [0x236+0x2]
            Reserved: 0  [0x238+0x2]
            g: 2.399993896484375  [0x23a+0x4]
            a: 0.9478607177734375  [0x23e+0x4]
            b: 0.0521392822265625  [0x242+0x4]
            c: 0.077392578125  [0x246+0x4]
            d: 0.0404510498046875  [0x24a+0x4]
        ▾ 'bTRC': Blue tone reproduction curve (0x62545243) — 'para', 32 bytes: function 3, gamma 2.400  [0x22e+0x20]
            Type: "para"  [0x22e+0x4]
            Reserved: 0  [0x232+0x4]
            Function type: 3  [0x236+0x2]
            Reserved: 0  [0x238+0x2]
            g: 2.399993896484375  [0x23a+0x4]
            a: 0.9478607177734375  [0x23e+0x4]
            b: 0.0521392822265625  [0x242+0x4]
            c: 0.077392578125  [0x246+0x4]
            d: 0.0404510498046875  [0x24a+0x4]
        ▾ 'chrm': Chromaticity (0x6368726d) — 'chrm', 36 bytes  [0x24e+0x24]
            Type: "chrm"  [0x24e+0x4]
            Reserved: 0  [0x252+0x4]
            Channels: 3  [0x256+0x2]
            Phosphor/colorant type: 0  [0x258+0x2]
            x: 0.6399993896484375  [0x25a+0x4]
            y: 0.3300018310546875  [0x25e+0x4]
            x: 0.3000030517578125  [0x262+0x4]
            y: 0.600006103515625  [0x266+0x4]
            x: 0.149993896484375  [0x26a+0x4]
            y: 0.05999755859375  [0x26e+0x4]
  ▾ ALPH — lossless (VP8L), vertical filter  [0x272+0x24]
      Chunk ID: "ALPH"  [0x272+0x4]
      Chunk size: 27  [0x276+0x4]
    ▾ Header  [0x27a+0x1]
        Reserved: 0  [0x27a+0x1]
        Preprocessing: none (0x0)  [0x27a+0x1]
        Filtering method: vertical (0x2)  [0x27a+0x1]
        Compression method: lossless (VP8L) (0x1)  [0x27a+0x1]
    ▾ Alpha bitstream — VP8L image stream without header  [0x27b+0x1a]
        Transform present: true  [0x27b+0x1]
        Transform type: color indexing (0x3) — transform 1  [0x27b+0x1]
        Color table size − 1: 3 — 4 colors, 4 pixels per byte  [0x27b+0x2]
        Transform data — the entropy-coded color table follows; the rest of the stream is entropy-coded
      Pad byte  [0x295+0x1]
  ▾ VP8 — 16×16  [0x296+0x48]
      Chunk ID: "VP8 "  [0x296+0x4]
      Chunk size: 64  [0x29a+0x4]
    ▾ Frame header  [0x29e+0xa]
        Frame type: 0 — key frame  [0x29e+0x1]
        Version: bicubic reconstruction, normal loop filter (0x0)  [0x29e+0x1]
        Show frame: true  [0x29e+0x1]
        First partition size: 17 — 17 bytes  [0x29e+0x3]
        Start code: 0x2a019d — 9d 01 2a  [0x2a1+0x3]
        Width: 16  [0x2a4+0x2]
        Horizontal scale: none (0x0)  [0x2a5+0x1]
        Height: 16  [0x2a6+0x2]
        Vertical scale: none (0x0)  [0x2a7+0x1]
      First partition — modes and probabilities (boolean-entropy-coded)  [0x2a8+0x11]
      Token partitions — DCT coefficients (boolean-entropy-coded)  [0x2b9+0x25]
  ▾ EXIF — Exif, fillyfoal cwebp test  [0x2de+0x44]
      Chunk ID: "EXIF"  [0x2de+0x4]
      Chunk size: 60  [0x2e2+0x4]
    ▾ Exif — TIFF BE, fillyfoal cwebp test  [0x2e6+0x3c]
      ▾ Header  [0x2e6+0x8]
          Byte order: "MM" — big-endian  [0x2e6+0x2]
          Version: TIFF (0x2a)  [0x2e8+0x2]
          First IFD offset: 0x8  [0x2ea+0x4]
      ▾ IFD0 — fillyfoal cwebp test  [0x2ee+0x1e]
          Entry count: 2  [0x2ee+0x2]
        ▾ Make: "fillyfoal"  [0x2f0+0xc] → 0x30c+0xa
            Tag: 0x10f — Make  [0x2f0+0x2]
            Type: ASCII (0x2)  [0x2f2+0x2]
            Count: 10  [0x2f4+0x4]
            Value offset: 0x26  [0x2f8+0x4]
            Data  [0x30c+0xa]
        ▾ Model: "cwebp test"  [0x2fc+0xc] → 0x316+0xb
            Tag: 0x110 — Model  [0x2fc+0x2]
            Type: ASCII (0x2)  [0x2fe+0x2]
            Count: 11  [0x300+0x4]
            Value offset: 0x30  [0x304+0x4]
            Data  [0x316+0xb]
          Next IFD offset: 0x0  [0x308+0x4]
  ▾ XMP — 320 bytes  [0x322+0x148]
      Chunk ID: "XMP "  [0x322+0x4]
      Chunk size: 320  [0x326+0x4]
      XML: "<?xpacket begin=\"\u{feff}\" id=\"W5M0MpCehiHzreSzNTczkc9d\"?><x:xmpmeta xmlns:x=\"adobe:ns:meta/\"><rdf:RDF xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"><rdf:Description rdf:about=\"\" xmlns:dc=\"http://purl.org/dc/elements/1.1/\"><dc:format>image/webp</dc:format></rdf:Description></rdf:RDF></x:xmpmeta><?xpacket end=\"w\"?>"  [0x32a+0x140]
