tests/snapshots/formats__webp__lossy-alpha-raw.webp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ lossy-alpha-raw.webp — WebP extended, 16×16, lossy, alpha  [0x0+0x172]
  ▾ Header  [0x0+0xc]
      Chunk ID: "RIFF"  [0x0+0x4]
      Size: 362  [0x4+0x4]
      Form type: "WEBP"  [0x8+0x4]
  ▾ VP8X — 16×16, alpha  [0xc+0x12]
      Chunk ID: "VP8X"  [0xc+0x4]
      Chunk size: 10  [0x10+0x4]
      Flags: 0x10 [ALPHA]  [0x14+0x1]
      Reserved: 0  [0x15+0x3]
      Canvas width − 1: 15 — 16 px  [0x18+0x3]
      Canvas height − 1: 15 — 16 px  [0x1b+0x3]
  ▾ ALPH — uncompressed  [0x1e+0x10a]
      Chunk ID: "ALPH"  [0x1e+0x4]
      Chunk size: 257  [0x22+0x4]
    ▾ Header  [0x26+0x1]
        Reserved: 0  [0x26+0x1]
        Preprocessing: none (0x0)  [0x26+0x1]
        Filtering method: none (0x0)  [0x26+0x1]
        Compression method: uncompressed (0x0)  [0x26+0x1]
      Alpha bitstream — raw alpha values  [0x27+0x100]
      Pad byte  [0x127+0x1]
  ▾ VP8 — 16×16  [0x128+0x4a]
      Chunk ID: "VP8 "  [0x128+0x4]
      Chunk size: 66  [0x12c+0x4]
    ▾ Frame header  [0x130+0xa]
        Frame type: 0 — key frame  [0x130+0x1]
        Version: bicubic reconstruction, normal loop filter (0x0)  [0x130+0x1]
        Show frame: true  [0x130+0x1]
        First partition size: 16 — 16 bytes  [0x130+0x3]
        Start code: 0x2a019d — 9d 01 2a  [0x133+0x3]
        Width: 16  [0x136+0x2]
        Horizontal scale: none (0x0)  [0x137+0x1]
        Height: 16  [0x138+0x2]
        Vertical scale: none (0x0)  [0x139+0x1]
      First partition — modes and probabilities (boolean-entropy-coded)  [0x13a+0x10]
      Token partitions — DCT coefficients (boolean-entropy-coded)  [0x14a+0x28]
