tests/snapshots/formats__webp__lossy.webp.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ lossy.webp — WebP lossy, 16×16  [0x0+0xf0]
  ▾ Header  [0x0+0xc]
      Chunk ID: "RIFF"  [0x0+0x4]
      Size: 232  [0x4+0x4]
      Form type: "WEBP"  [0x8+0x4]
  ▾ VP8 — 16×16  [0xc+0xe4]
      Chunk ID: "VP8 "  [0xc+0x4]
      Chunk size: 220  [0x10+0x4]
    ▾ Frame header  [0x14+0xa]
        Frame type: 0 — key frame  [0x14+0x1]
        Version: 0  [0x14+0x1]
        Show frame: true  [0x14+0x1]
        First partition size: 34  [0x14+0x3]
        Start code: 0x2a019d — 9d 01 2a  [0x17+0x3]
        Width: 16  [0x1a+0x2]
        Horizontal scale: none (0x0)  [0x1b+0x1]
        Height: 16  [0x1c+0x2]
        Vertical scale: none (0x0)  [0x1d+0x1]
      Bitstream  [0x1e+0xd2]
